--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.6",
     "date-fns": "^2.21.1",
+    "eslint-config-next": "^13.1.1",
     "gray-matter": "^4.0.3",
-    "next": "^10.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^6.0.1",
     "react-syntax-highlighter": "^15.4.3",
     "remark": "^13.0.0",
